--- a/AzureWebAppSqlDemo/appsettings.json
+++ b/AzureWebAppSqlDemo/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "SQLConnection": "Server=tcp:mydovedbserver.database.windows.net,1433;Initial Catalog=demoDB;Persist Security Info=False;User ID=sql_user;Password=P@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    }
+  
 }
